refactor: Simplify Column and Value utility classes by using utility methods and improving readability to fix Sonar reported issues.